--- a/index.html
+++ b/index.html
@@ -10,8 +10,121 @@
 </head>
 <body>
     <header class="head">
-        <img src="" alt="" title="">
+        <div class="head__body">
+            <div class="head__logo-block">
+                <img src="img/blocks/logo.png" alt="" title="" class="head__logo">
+                <div class="head__wave-block">
+                    <img src="img/blocks/wave.png" alt="" title="" class="head__wave">
+                </div>
+                <span class="head__logo-title">Ульяновск туристический</span>
+                
+            </div>
+            <ul class="head__buttons">
+                <li class="head__button">Стать участником</li>
+                <li class="head__button">Стать партнером</li>
+            </ul>
+            <div class="head__widgets">
+                <img class="head__search" src="img/blocks/search.png" alt="поиск" title="поиск">
+                <a class="head__instagram" href="https://www.instagram.com/" target="_blank"><img src="img/blocks/insta.png" alt="" title=""></a>
+                <span class="head__download">Загрузите приложение</span>
+                <a class="head__google" href="https://play.google.com/" target="_blank"><img src="img/blocks/googleplay.png"></a>
+                <a class="head__apple" href="https://www.apple.com/ru/app-store/" target="_blank"><img src="img/blocks/apple.png"></a>
+                <a class="head__login" href="#">Войти</a>
+            </div>
+        </div>  
     </header>
-    
+    <section class="head__navigation">
+        <ul class="head__links">
+            <li><a href="#" class="head__link">рейтинги</a></li>
+            <li><a href="#" class="head__link">новости</a></li>
+            <li><a href="#" class="head__link">партнеры</a></li>
+            <li><a href="#" class="head__link">викторина</a></li>
+            <li><a href="#" class="head__link">контакты</a></li>
+        </ul>
+    </section>
+    <section class="banner">
+        <span class="banner__ttile">Викторина</span>
+        <span class="banner__ttile big">а ты знаешь свой город?</span>
+        <button class="banner__button">Участвовать</button>
+    </section>
+    <section class="poster">
+        <div class="poster__right-wave">
+            <img src="img/blocks/bg_wave.png" alt="" title="">
+        </div>
+        <div class="poster__left-wave">
+            <img src="img/blocks/bg_wave2.png" alt="" title="">
+        </div>
+        <div class="poster__body">
+            <div class="poster__ttile-block">
+                <div class="poster__wave-block">
+                    <img src="img/blocks/wave.png" alt="" title="" class="poster__title-wave">
+                </div>
+                <h2 class="poster__ttile">Афиша мероприятий</h2>
+                <img class="poster__ttile-icon" src="img/pages/calendar.png" alt="" title="">
+            </div>
+            <div class="poster__info-block">
+                <div class="poster__info current-poster">
+                    <div class="current-poster__picture">
+                        <span class="date">24 04</span>
+                        <img src="img/pages/current-poster.jpg" title="" alt="">
+                        <span class="name">городские легенды</span>
+                    </div>
+                    <div class="current-poster__info">
+                        <div class="current-poster__date-block">
+                            <span class="current-poster__date">24 апреля 22</span>
+                            <span class="current-poster__place">Встреча у дома техники</span>
+                            <span class="current-poster__time">12:00-15:00</span>
+                        </div>
+                        <span class="current-poster__type">Квест прогулка</span>
+                        <h3 class="current-poster__name">Городские легенды</h3>
+                        <p class="current-poster__text">Во время экскурсии вы узнаете о привидениях которые появляются в городе, о святых, которые жили в городе и какие чудеса были с этим связаны, и другие интересные городские легенды...</p>
+                        <a class="current-poster__link" href="#" target="_blank">Подробнее...</a>
+                    </div>
+                </div>
+                <ul class="poster__list">
+                    <li class="poster__item">
+                        <img class="poster__item-preview" src="img/pages/poster/poster1.jpg" alt="" title="">
+                        <div class="poster__item-info">
+                            <p class="poster__item-block">
+                                <span class="poster__item__date">24 апреля 22</span>
+                                <span class="poster__item__time">12:00-15:00</span>
+                            </p>
+                            <a class="poster__item-link">Квест о семье Ульяновых</a>
+                        </div>
+                    </li>
+                    <li class="poster__item">
+                        <img class="poster__item-preview" src="img/pages/poster/poster2.jpg" alt="" title="">
+                        <div class="poster__item-info">
+                            <p class="poster__item-block">
+                                <span class="poster__item__date">24 апреля 22</span>
+                                <span class="poster__item__time">12:00-15:00</span>
+                            </p>
+                            <a class="poster__item-link">Квест о семье Ульяновых</a>
+                        </div>
+                    </li>
+                    <li class="poster__item">
+                        <img class="poster__item-preview" src="img/pages/poster/poster3.jpg" alt="" title="">
+                        <div class="poster__item-info">
+                            <p class="poster__item-block">
+                                <span class="poster__item__date">24 апреля 22</span>
+                                <span class="poster__item__time">12:00-15:00</span>
+                            </p>
+                            <a class="poster__item-link">Первым делом самолеты</a>
+                        </div>
+                    </li>
+                    <li class="poster__item">
+                        <img class="poster__item-preview" src="img/pages/poster/poster4.jpg" alt="" title="">
+                        <div class="poster__item-info">
+                            <p class="poster__item-block">
+                                <span class="poster__item__date">24 апреля 22</span>
+                                <span class="poster__item__time">12:00-15:00</span>
+                            </p>
+                            <a class="poster__item-link">Городские легенды</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
