--- a/index.html
+++ b/index.html
@@ -124,6 +124,94 @@
                     </li>
                 </ul>
             </div>
+            <a class="poster__link">Все мероприятия</a>
+        </div>
+    </section>
+    <section class="active-quests">
+        <div class="active-quests__body">
+            <div class="active-quests__ttile-block">
+                <div class="active-quests__wave-block">
+                    <img src="img/blocks/wave.png" alt="" title="" class="active-quests__title-wave">
+                </div>
+                <h2 class="active-quests__ttile">Активные Квесты 2022</h2>
+            </div>
+            <ul class="active-quests__list">
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest1.png" alt="" title="">
+                        <span class="active-quests__name">Активный отдых</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest2.png" alt="" title="">
+                        <span class="active-quests__name">Воинская слава</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest3.png" alt="" title="">
+                        <span class="active-quests__name">Авиация</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest4.png" alt="" title="">
+                        <span class="active-quests__name">Детские</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest5.png" alt="" title="">
+                        <span class="active-quests__name">Литературные</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest6.png" alt="" title="">
+                        <span class="active-quests__name">исторические</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest7.png" alt="" title="">
+                        <span class="active-quests__name">городские легенды</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active-quests__item" href="#">
+                        <img src="img/pages/active_quests/quest8.png" alt="" title="">
+                        <span class="active-quests__name">Природа</span>
+                        <span class="active-quests__count">120 квестов</span>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+    <section class="popular-quests">
+        <div class="popular-quests__body">
+            <div class="popular-quests__ttile-block">
+                <div class="popular-quests__wave-block">
+                    <img src="img/blocks/wave.png" alt="" title="" class="popular-quests__title-wave">
+                </div>
+                <h2 class="popular-quests__ttile">популярные  квест-площадки</h2>
+            </div>
+            <ul class="popular-quests__list">
+                <li>
+                    <a class="popular-quests__item" href="#">
+                        <img class="popular-quests__image" src="img/pages/popular_quests/quest1.jpg" alt="" title="">
+                        <span class="popular-quests__name">Активный отдых</span>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
