--- a/index.html
+++ b/index.html
@@ -208,7 +208,11 @@
                 <li>
                     <a class="popular-quests__item" href="#">
                         <img class="popular-quests__image" src="img/pages/popular_quests/quest1.jpg" alt="" title="">
-                        <span class="popular-quests__name">Активный отдых</span>
+                        <span class="popular-quests__name">Дом-музей Ленина</span>
+                        <p class="popular-quests__text">Расположен в доме, которым владела в Симбирске семья Ульяновых в 1878-1887 гг. Здесь жил и трудился просветитель...</p>
+                        <span class="popular-quests__type">Активные квесты</span>
+                        <span class="popular-quests__address">Ленина, 68</span>
+                        <span class="popular-quests__time">10 — 18, Ежедневно</span>
                     </a>
                 </li>
             </ul>
