верстка из дома
верстка из дома

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="poster__left-wave">
             <img src="img/blocks/bg_wave2.png" alt="" title="">
         </div>
+        <img class="poster__round" src="img/blocks/poster-round.png" alt="" title="">
         <div class="poster__body">
             <div class="poster__ttile-block">
                 <div class="poster__wave-block">
@@ -128,13 +129,16 @@
         </div>
     </section>
     <section class="active-quests">
+        <img class="active-quests__round" src="img/blocks/quests-round.png" alt="" title="">
         <div class="active-quests__body">
             <div class="active-quests__ttile-block">
                 <div class="active-quests__wave-block">
                     <img src="img/blocks/wave.png" alt="" title="" class="active-quests__title-wave">
                 </div>
+
                 <h2 class="active-quests__ttile">Активные Квесты 2022</h2>
             </div>
+
             <ul class="active-quests__list">
                 <li>
                     <a class="active-quests__item" href="#">
@@ -197,6 +201,9 @@
         </div>
     </section>
     <section class="popular-quests">
+        <div class="popular-quests__right-wave">
+            <img src="img/blocks/bg_wave3.png" alt="" title="">
+        </div>
         <div class="popular-quests__body">
             <div class="popular-quests__ttile-block">
                 <div class="popular-quests__wave-block">
@@ -215,8 +222,106 @@
                         <span class="popular-quests__time">10 — 18, Ежедневно</span>
                     </a>
                 </li>
+                <li>
+                    <a class="popular-quests__item" href="#">
+                        <img class="popular-quests__image" src="img/pages/popular_quests/quest2.jpg" alt="" title="">
+                        <span class="popular-quests__name">Набережная Аквамолла</span>
+                        <p class="popular-quests__text">Модная и современная прогулочная зона на берегу реки Свияги</p>
+                        <span class="popular-quests__type">Активные квесты</span>
+                        <span class="popular-quests__address">Московское ш., 108</span>
+                        <span class="popular-quests__time">10 — 18, Ежедневно</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="popular-quests__item" href="#">
+                        <img class="popular-quests__image" src="img/pages/popular_quests/quest3.jpg" alt="" title="">
+                        <span class="popular-quests__name">Музей гражданской авиации</span>
+                        <p class="popular-quests__text">Не имеющий аналогов комплекс под открытым небом, где можно увидеть легендарные пассажирские и невоенные воздушные суда...</p>
+                        <span class="popular-quests__type">Активные квесты</span>
+                        <span class="popular-quests__address">Авиационная, 20а</span>
+                        <span class="popular-quests__time">Вт-пт 10—17, сб-вс 10 — 16, пн — выходной</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="popular-quests__item" href="#">
+                        <img class="popular-quests__image" src="img/pages/popular_quests/quest4.jpg" alt="" title="">
+                        <span class="popular-quests__name">Пальцинский остров</span>
+                        <p class="popular-quests__text">Остров на Куйбышевском водохранилище вблизи Ульяновска, удалён от левого берега Волги на расстояние около 3 км...</p>
+                        <span class="popular-quests__type">Активные квесты</span>
+                        <span class="popular-quests__address">10 км от Речного порта</span>
+                    </a>
+                </li>
+            </ul>
+            <button class="popular-quests__link">Загрузить еще</button>
+        </div>
+    </section>
+    <section class="partners">
+        <img class="partners__round" src="img/blocks/partners-round.png" alt="" title="">
+        <div class="partners__left-wave">
+            <img src="img/blocks/bg_wave4.png" alt="" title="">
+        </div>
+        <div class="partners__body">
+            <div class="partners__ttile-block">
+                <div class="partners__wave-block">
+                    <img src="img/blocks/wave.png" alt="" title="" class="partners__title-wave">
+                </div>
+                <h2 class="partners__ttile">наши партнёры</h2>
+            </div>
+            <ul class="partners__list">
+                <li>
+                    <img class="partners__img" src="img/pages/partners/1.jpg" alt="" title="">
+                    <span class="partners__name">Аппарат Общественной Палаты Ульяновской области</span>
+                </li>
+                <li>
+                    <img class="partners__img" src="img/pages/partners/2.jpg" alt="" title="">
+                    <span class="partners__name">Министерство искусства и культурной политики Ульяновской области</span>
+                </li>
+                <li>
+                    <img class="partners__img" src="img/pages/partners/3.jpg" alt="" title="">
+                    <span class="partners__name">Агентство по туризму Ульяновской области</span>
+                </li>
+                <li>
+                    <img class="partners__img" src="img/pages/partners/4.jpg" alt="" title="">
+                    <span class="partners__name">Министерство просвещения и воспитания ульяновской области</span>
+                </li>
             </ul>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__body">
+            <div class="footer__info">
+                <div class="footer__logo-block">
+                    <img class="footer__logo" src="img/blocks/logo_footer.png" alt="" title="">
+                    <img class="footer__waves" src="img/blocks/footer-waves.png" alt="" title="">
+                    <span class="footer__name">Ульяновск туристический</span>
+                </div>
+                <ul class="footer__buttons">
+                    <li>
+                        <a>Стать участником</a>
+                    </li>
+                    <li>
+                        <a>Стать партнёром</a>
+                    </li>
+                </ul>
+                <ul class="footer__links">
+                    <li><a href="#" class="footer__link">Рейтинги</a></li>
+                    <li><a href="#" class="footer__link">Новости</a></li>
+                    <li><a href="#" class="footer__link">Партнеры</a></li>
+                    <li><a href="#" class="footer__link">Викторина</a></li>
+                    <li><a href="#" class="footer__link">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="footer__widgets">
+                <div class="footer__apps">
+                    <img src="img/blocks/googleplay2.png">
+                    <img src="img/blocks/appstore.png">
+                </div>
+                <div class="footer__widget-links">
+                    <img src="img/blocks/inst-white.png">
+                    <a href="#">Войти</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
